# stableops-python

./: .env.example  .gitignore  AGENTS.md  README.md  app.py  pyproject.toml  requirements.txt
data/: .gitkeep  app.db
docs/: architecture.md  new_project_workflow.md
docs/prompts/: master_build_prompt.md  review_prompt.md
src/: __init__.py  config.py  schemas.py  startup.py
src/db/: README.md
src/integrations/: __init__.py  artifacts.py  llm.py  storage.py
src/prompts/: README.md  newsletter.py  social_post.py
src/services/: __init__.py  create_newsletter.py  create_social_post.py  draft_grant_proposal.py  generate_text.py
src/utils/: README.md
tests/: conftest.py  test_config.py  test_create_newsletter.py  test_create_social_post.py  test_draft_grant_proposal.py  test_smoke.py  test_storage.py
