[project]
name = "stableops-python"
version = "0.1.0"
description = "StableOps — AI-powered tools for therapeutic riding programs (Python + Streamlit)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.55",
    "openai>=2.26",
    "python-dotenv>=1.2",
    "pydantic>=2.0",
    "anthropic>=0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
